<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageview"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:src="@drawable/scud">

        </ImageView>


        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageview"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/phoneNumber"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:id="@+id/mobileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_edittext"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="+91"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@color/grey">

            </View>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:hint="90000000000"
                android:textColorHint="@color/black"
                android:textSize="16sp">

            </EditText>

        </LinearLayout>

        <Button
            android:id="@+id/request_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobileLayout"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_button_yellow"
            android:gravity="center"
            android:text="@string/otprequest"
            android:textColor="@color/black"
            android:textSize="16sp">

        </Button>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/textverify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verifyMessage"
            android:textColor="@color/grey">

        </TextView>

        <EditText
            android:id="@+id/termsconditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textverify"
            android:layout_margin="10dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/termsText"
            android:textColor="@color/violet"
            android:textSize="12sp">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/termsconditions"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/otpmessage"
            android:textColor="@color/grey"
            android:textSize="12sp">

        </TextView>

    </RelativeLayout>

</RelativeLayout>