<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/scudlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <ImageView

            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/scud">

        </ImageView>

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/my_pager"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/scudlogo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/my_tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/my_pager"
        app:tabBackground="@drawable/indicator_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"></com.google.android.material.tabs.TabLayout>




    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_tablayout"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/travellingText">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/travellingmoreText"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_button_yellow"
        android:gravity="center"
        android:text="@string/getStarted"
        android:textColor="@color/black"
        android:textSize="16sp">

    </Button>

</RelativeLayout>