<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp">


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/my_pager"
            android:layout_width="match_parent"
            android:layout_height="150dp">

        </androidx.viewpager.widget.ViewPager>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/my_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@null"
            app:tabBackground="@drawable/indicator_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp">

        </com.google.android.material.tabs.TabLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardpager"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Select your Preference"
        android:textColor="@color/black"
        android:textSize="20sp">

    </TextView>

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/textview1"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ride">

                </ImageView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/courier">

                </ImageView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cardview"
        android:layout_below="@+id/layout1">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ridesafety">

                </ImageView>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/ridesafety"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text2"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/couriersafety"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginEnd="10dp"
                    android:textStyle="normal">

                </TextView>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview">
        <LinearLayout
            android:id="@+id/cardview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ridesafety">

                </ImageView>

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/couriersafetytitle"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text3"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/couriersafetydesc"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginEnd="10dp"
                    android:textStyle="normal">

                </TextView>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>