<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/scud">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="Please Enter OTP sent to"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/email_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="+91 7330923910"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <EditText
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/color_cursor">

            </EditText>

            <EditText
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/color_cursor">

            </EditText>

            <EditText
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/color_cursor">

            </EditText>

            <EditText
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/color_cursor">

            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_button_yellow"
            android:text="verify"
            android:textColor="@color/black">

        </Button>

        <TextView
            android:id="@+id/resendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="00.30 sec"
            android:textColor="#8030C0"
            android:textSize="20sp">

        </TextView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/textverify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verifyMessage"
            android:textColor="@color/grey">

        </TextView>

        <EditText
            android:id="@+id/termsconditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textverify"
            android:layout_margin="10dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/termsText"
            android:textColor="@color/violet"
            android:textSize="12sp">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/termsconditions"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/otpmessage"
            android:textColor="@color/grey"
            android:textSize="12sp">

        </TextView>

    </RelativeLayout>


</RelativeLayout>